# spielerplus-calendar

./: .gitignore  Dockerfile  README.md  README.rst  pyproject.toml
.github/workflows/: ci-build.yml  docker.yml
spielerplus_calendar/: appointment.py  config.py  crawler.py  logic.py  main.py  parsing.py  rendering.py  server.py
tests/: fixtures.py  test_appointment.py  test_config.py  test_logic.py  test_parsing.py  test_rendering.py  test_spielerplus_calendar.py
tests/data/: config.json  event-calendar-items-filtered.json  event-calendar-items.json  event-calendar.html  event-calendar.ics  event-list-0.html  event-list-item-accepted.html  event-list-item-canceled.html  event-list-item-declined.html  event-list-item-multiday.html  event-list-item-no-meet-end.html  event-list-item-subtitle.html  event-list-item-unnominated.html  event-list-old-0.html  event-list-old-3.html  event-multiday.html  event-no-address.html  event.html  event.ics  events.html  game-long-desc.html  game.html
