[tool.poetry]
name = "spielerplus-calendar"
version = "0.1.0"
description = ""
authors = ["Daniel Brown <djbrown@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
requests = "2.*"
icalendar = "4.*"

[tool.poetry.dev-dependencies]
pytest = "7.*"
black = "22.*"
pylint = "2.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "missing-docstring"
]
